# CopyNpaste

./: .gitignore  CMakeLists.txt
include/: callback.h  hotkey.h  main.h  utils.h
src/: callback.cpp  hotkey.cpp  main.cpp  utils.cpp
